- fixed popup not covering footer

--- a/src/Components/Frame/Frame.css
+++ b/src/Components/Frame/Frame.css
@@ -38,6 +38,11 @@
 
 footer{
     background: #0054E8;
+    position: fixed;
+
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 .footer{
     display: flex;
